--- a/week-5/grashorn-sequence-game.html
+++ b/week-5/grashorn-sequence-game.html
@@ -47,7 +47,7 @@
                 >Choose a number sequence:</label
               >
               <select name="txtMyChoice" id="sequence" class="drop-down-menu">
-                <option value="select">Select</option>
+                <option value="select">--Select--</option>
                 <option value="fibonacci">Fibbonacci Sequence</option>
                 <option value="even">Even Numbers</option>
                 <option value="odd">Odd Numbers</option>
